--- a/index.html
+++ b/index.html
@@ -1,7 +1,238 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages!!!!</p>
-  </body>
-</html>
+<div
+  style="display: flex; justify-content: flex-start; align-items: flex-start; width: 612px; height: 792px; overflow: hidden; background: #fff;">
+  <div
+    style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 187px; overflow: hidden; gap: 10px; padding-left: 18px; padding-right: 18px; padding-top: 24px; padding-bottom: 24px; background: #f5fbff;">
+    <div
+      style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; gap: 16px;">
+      <div
+        style="display: flex; flex-direction: column; justify-content: flex-start; align-items: center; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative; gap: 16px;">
+        <div
+          style="flex-grow: 0; flex-shrink: 0; width: 100.9px; height: 100.9px;">
+          <div style="position: absolute; left: 24.84px; top: -0.21px;"></div>
+          <img
+            src="rectangle.png"
+            style="width: 103.78px; height: 105.01px; position: absolute; left: 23.51px; top: -0.43px; object-fit: none;" />
+        </div>
+        <p
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 23px; font-weight: 700; text-align: left; color: #004f88;">
+          Dennis Best
+        </p>
+      </div>
+      <div
+        style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; gap: 24px;">
+        <div
+          style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative; gap: 8px;">
+          <p
+            style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 14px; font-weight: 700; text-align: left; color: #0060a5;">
+            About
+          </p>
+          <p
+            style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 12px; text-align: left; color: #555;">
+            <span
+              style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 12px; text-align: left; color: #555;">I
+              live in San Francisco and design things for fun and profit. I
+              enjoy road trips with
+              my family, classic films, motorcycle adventures, and
+              photography.</span><br /><br /><span
+              style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 12px; text-align: left; color: #555;">In
+              the interest of brevity, my formative print design and publishing
+              experience is
+              not included here. I’m happy to elaborate on that, too!</span>
+          </p>
+        </div>
+        <div
+          style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative; gap: 8px;">
+          <p
+            style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 14px; font-weight: 700; text-align: left; color: #0060a5;">
+            Contact
+          </p>
+          <p
+            style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 12px; text-align: left; color: #555;">
+            <span
+              style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 12px; text-align: left; color: #555;">+1
+              415 900 6505</span><br /><span
+              style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 12px; text-align: left; color: #555;">mail@dennisbest.design</span><br /><span
+              style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 12px; text-align: left; color: #555;">https://dennisbest.design</span>
+          </p>
+        </div>
+        <div
+          style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative; gap: 8px;">
+          <p
+            style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 14px; font-weight: 700; text-align: left; color: #0060a5;">
+            Design Tools
+          </p>
+          <p
+            style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 12px; text-align: left; color: #555;">
+            Figma, Figjam, Illustrator, Photoshop, and many more
+          </p>
+        </div>
+        <div
+          style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative; gap: 8px;">
+          <p
+            style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 14px; font-weight: 700; text-align: left; color: #0060a5;">
+            Coding Experience
+          </p>
+          <p
+            style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 151px; font-size: 12px; text-align: left; color: #555;">
+            CSS/Sass/Less, Tailwind, Storybook, JavaScript
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div
+    style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 1; overflow: hidden; gap: 24px; padding: 24px;">
+    <div
+      style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative; gap: 4px;">
+      <p
+        style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 14px; font-weight: 700; text-align: left; color: #0060a5;">
+        SENIOR PRODUCT DESIGNER
+      </p>
+      <div
+        style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0;">
+        <div
+          style="display: flex; justify-content: space-between; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative;">
+          <p
+            style="flex-grow: 0; flex-shrink: 0; font-size: 12px; font-weight: 500; text-align: left; color: #555;">
+            FORAGE
+          </p>
+          <p
+            style="flex-grow: 0; flex-shrink: 0; font-size: 12px; text-align: left;">
+            <span
+              style="flex-grow: 0; flex-shrink: 0; font-size: 12px; text-align: left; color: #555;">Nov
+              2022 - </span><span
+              style="flex-grow: 0; flex-shrink: 0; font-size: 12px; text-align: left; color: #0060a5;">Acquired
+              by EAB, April 2024</span>
+          </p>
+        </div>
+      </div>
+      <p
+        style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">
+        <span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Designed
+          new features for a large user base</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Collaborated
+          with fellow designers to modernize an outdated UI/UX</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Spearheaded
+          the design and maintenance of an internal Figma design
+          system</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Worked
+          closely with engineers to deliver clean, accessible, and scalable
+          designs</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Provided
+          code examples to developers as needed to ensure polish and design
+          fidelity</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Conducted
+          user tests to refine user interactions</span>
+      </p>
+    </div>
+    <div
+      style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative; gap: 4px;">
+      <p
+        style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 14px; font-weight: 700; text-align: left; color: #0060a5;">
+        SENIOR DESIGNER AND DEVELOPER
+      </p>
+      <div
+        style="display: flex; flex-direction: column; justify-content: space-between; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; height: 17px;">
+        <div
+          style="display: flex; justify-content: space-between; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative;">
+          <p
+            style="flex-grow: 0; flex-shrink: 0; font-size: 12px; font-weight: 500; text-align: left; color: #555;">
+            AMI
+          </p>
+          <p
+            style="flex-grow: 0; flex-shrink: 0; font-size: 12px; text-align: left; color: #555;">
+            Dec 2017 - Oct 2022
+          </p>
+        </div>
+      </div>
+      <p
+        style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">
+        <span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Established
+          an internal design system, ensuring consistency and efficiency in
+          product
+          development</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Designed
+          and developed responsive features for a mobile-first web application,
+          catering
+          to a large user base</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Designed
+          visually engaging storefront pages showcasing products from over 2000
+          brands</span>
+      </p>
+    </div>
+    <div
+      style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative; gap: 4px;">
+      <p
+        style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 14px; font-weight: 700; text-align: left; color: #0060a5;">
+        DESIGNER / FRONT END DEVELOPER
+      </p>
+      <div
+        style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0;">
+        <div
+          style="display: flex; justify-content: space-between; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative;">
+          <p
+            style="flex-grow: 0; flex-shrink: 0; font-size: 12px; font-weight: 500; text-align: left; color: #555;">
+            WORKDAY
+          </p>
+          <p
+            style="flex-grow: 0; flex-shrink: 0; font-size: 12px; text-align: left; color: #555;">
+            February 2014 - February 2017
+          </p>
+        </div>
+      </div>
+      <p
+        style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">
+        <span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Designed
+          interfaces and interactions as a member of the Insight Applications
+          team</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Constructed
+          data visualizations to streamline data interpretation and
+          decision-making
+          processes</span>
+      </p>
+    </div>
+    <div
+      style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative; gap: 4px;">
+      <p
+        style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 14px; font-weight: 700; text-align: left; color: #0060a5;">
+        DESIGNER / FULL-STACK DEVELOPER
+      </p>
+      <div
+        style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0;">
+        <div
+          style="display: flex; justify-content: space-between; align-items: flex-start; align-self: stretch; flex-grow: 0; flex-shrink: 0; position: relative;">
+          <p
+            style="flex-grow: 0; flex-shrink: 0; font-size: 12px; font-weight: 500; text-align: left; color: #555;">
+            IDENTIFIED
+          </p>
+          <p
+            style="flex-grow: 0; flex-shrink: 0; font-size: 12px; text-align: left;">
+            <span
+              style="flex-grow: 0; flex-shrink: 0; font-size: 12px; text-align: left; color: #555;">Feb
+              2012 - </span><span
+              style="flex-grow: 0; flex-shrink: 0; font-size: 12px; text-align: left; color: #0060a5;">Acquired
+              by Workday, Feb 2014</span>
+          </p>
+        </div>
+      </div>
+      <p
+        style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">
+        <span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Acted
+          as the point person for the overall visual experience of a complex
+          recruiting
+          app</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Facilitated
+          user interviews and card-sorting exercises to gather user feedback
+          effectively</span><br /><span
+          style="align-self: stretch; flex-grow: 0; flex-shrink: 0; width: 377px; font-size: 12px; text-align: left; color: #555;">Led
+          workshops on design and front-end development topics to share
+          expertise and foster
+          team growth</span>
+      </p>
+    </div>
+  </div>
+</div>
