--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <html>
   <body class="work-sans-400">
     <h1>Hello World</h1>
+
+    <button type="button">I'm a cool circle button</button>
+
     <p class="work-sans-400">I'm hosted with GitHub Pages!!!!</p>
   </body>
 </html>
