--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <script blocking="render" async src="script.js"></script>
 </head>
 <html>
   <body class="work-sans-400">
@@ -9,5 +10,17 @@
     <button type="button">I'm a cool circle button</button>
 
     <p class="work-sans-400">I'm hosted with GitHub Pages!!!!</p>
+
+    <div class="square-wrapper">
+      <div class="square square-transition"></div>
+    </div>
+
+    <div class="square-wrapper">
+      <div class="square square-transition"></div>
+    </div>
+
+    <div class="square-wrapper">
+      <div class="square square-transition"></div>
+    </div>
   </body>
 </html>
