--- a/index.html
+++ b/index.html
@@ -5,22 +5,51 @@
 </head>
 <html>
   <body class="work-sans-400">
-    <h1>Hello World</h1>
-
-    <button type="button">I'm a cool circle button</button>
-
+    <h1>
+      <span class="accent-line">Hello World</span> <span> other things</span>
+    </h1>
     <p class="work-sans-400">I'm hosted with GitHub Pages!!!!</p>
 
-    <div class="square-wrapper">
-      <div class="square square-transition"></div>
+    <div class="animated-section-wrapper">
+      <div class="animated-section">
+        <p>Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco
+          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa
+          qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </div>
 
-    <div class="square-wrapper">
-      <div class="square square-transition"></div>
+    <div class="animated-section-wrapper">
+      <div class="animated-section">
+        <p>Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco
+          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa
+          qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </div>
 
-    <div class="square-wrapper">
-      <div class="square square-transition"></div>
+    <div class="animated-section-wrapper">
+      <div class="animated-section">
+        <p>Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco
+          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa
+          qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </div>
   </body>
 </html>
