--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="style.css">
-  <script blocking="render" async src="script.js"></script>
+  <script blocking="render" src="script.js"></script>
 </head>
 <html>
   <body class="work-sans-400">
