First major commit

--- a/index.html
+++ b/index.html
@@ -1,72 +1,85 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="style.css">
-  <script blocking="render" src="script.js"></script>
+  <script blocking="render" src="scripts/animated-section.js"></script>
 </head>
 <html>
   <body class="work-sans-400">
-    <script id="replace_with_navbar" src="nav.js"></script>
+    <script id="replace_with_header" blocking="render"
+      src="scripts/header.js"></script>
 
-    <header>header here</header>
     <main>
-      <h1>
-        <span class="accent-line">Hello World</span><span> other things</span>
-      </h1>
-      <p class="work-sans-400">I'm hosted with GitHub Pages!!!!</p>
+      <section class="container-large">
+        <section class="hero">
+          <h3 class="hero-salutation">Hi, I'm Dennis ✌️
+          </h3>
 
-      <div class="animated-section-wrapper">
-        <div class="animated-section">
-          <p>Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa
-            qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-      </div>
+          <h1 class="hero-display">
+            <span class="accent-line"><span>Building</span></span><span>
+              digital products, brands, and experience.</span>
+          </h1>
+          <p class="hero-paragraph">a Product Designer and Visual Developer
+            in SF. I specialize in UI/UX Design, Responsive Web Design, and
+            Visual Development.
+          </p>
+        </section>
 
-      <div class="animated-section-wrapper">
-        <div class="animated-section">
-          <p>Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa
-            qui officia deserunt mollit anim id est laborum.</p>
+        <div class="animated-section-wrapper">
+          <div class="animated-section">
+            <p>Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+              ullamco
+              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              dolor
+              in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa
+              qui officia deserunt mollit anim id est laborum.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="animated-section-wrapper">
-        <div class="animated-section">
-          <p>Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa
-            qui officia deserunt mollit anim id est laborum.</p>
+        <div class="animated-section-wrapper">
+          <div class="animated-section">
+            <p>Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+              ullamco
+              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              dolor
+              in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa
+              qui officia deserunt mollit anim id est laborum.</p>
+          </div>
         </div>
-      </div>
+
+        <div class="animated-section-wrapper">
+          <div class="animated-section">
+            <p>Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+              ullamco
+              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              dolor
+              in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa
+              qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </section>
+
     </main>
-    <footer>
-      footer here
-    </footer>
+
+    <script id="replace_with_footer" blocking="render"
+      src="scripts/footer.js"></script>
+
   </body>
 </html>
