--- a/header.html
+++ b/header.html
@@ -2,10 +2,10 @@
   <section>
     <a href="index.html" class="logo"></a>
     <nav>
-      <a href="#">link</a>
-      <a href="#">link</a>
-      <a href="#">link</a>
-      <a href="#">link</a>
+      <a class="nav-link" href="#work">Work</a>
+      <a class="nav-link" href="#about">About</a>
+      <a class="nav-link" href="#resume">Resumé</a>
+      <a class="nav-link" href="#contact">Contact</a>
 
     </nav>
 
