--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="style.css">
-  <script blocking="render" src="scripts/animated-section.js"></script>
+  <script blocking="render" src="scripts/fadeInUp.js"></script>
 </head>
 <html>
   <body class="work-sans-400">
+
+    <h1>It's working!</h1>
+    <!-- 
+
     <script id="replace_with_header" blocking="render"
       src="scripts/header.js"></script>
 
     <main>
       <section class="container-large">
         <section class="hero">
-          <h3 class="hero-salutation">Hi, I'm Dennis ✌️
-          </h3>
+          <div
+            class="avatar-circle fadeInUp fast"></div>
+          <div class="hero-salutation">
+            <h3 class="hero-salutation__text">Hi, I'm Dennis</h3>
+            <div class="hero-salutation__icon"></div>
+
+          </div>
 
           <h1 class="hero-display">
             <span class="accent-line"><span>Building</span></span><span>
@@ -24,8 +33,8 @@
           </p>
         </section>
 
-        <div class="animated-section-wrapper">
-          <div class="animated-section">
+        <section class="major" id="about">
+          <div class="fadeInUp slow">
             <p>Lorem ipsum dolor sit amet, consectetur
               adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore
@@ -39,10 +48,10 @@
               culpa
               qui officia deserunt mollit anim id est laborum.</p>
           </div>
-        </div>
+        </section>
 
-        <div class="animated-section-wrapper">
-          <div class="animated-section">
+        <section class="major" id="cases">
+          <div class="fadeInUp slow">
             <p>Lorem ipsum dolor sit amet, consectetur
               adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore
@@ -56,10 +65,10 @@
               culpa
               qui officia deserunt mollit anim id est laborum.</p>
           </div>
-        </div>
+        </section>
 
-        <div class="animated-section-wrapper">
-          <div class="animated-section">
+        <section class="major" id="resume">
+          <div class="fadeInUp slow">
             <p>Lorem ipsum dolor sit amet, consectetur
               adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore
@@ -76,10 +85,28 @@
         </div>
       </section>
 
+      <section class="major" id="contact">
+        <div class="fadeInUp slow">
+          <p>Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            dolor
+            in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa
+            qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </section>
+
     </main>
 
     <script id="replace_with_footer" blocking="render"
-      src="scripts/footer.js"></script>
+      src="scripts/footer.js"></script> -->
 
   </body>
 </html>
