--- a/index.html
+++ b/index.html
@@ -2,11 +2,31 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <script blocking="render" src="scripts/fadeInUp.js"></script>
+  <style>
+    .cont {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      width: 100vw;
+    }
+    .temp {
+      max-width: 80rem;
+      min-width: 18rem;
+      padding: 1rem;
+    }
+
+  </style>
 </head>
 <html>
   <body class="work-sans-400">
-
-    <h1>It's working!</h1>
+    <div class="cont">
+      <div class="temp">
+        <h1>I am working on this page right now. Check back on May 6, 2024. In
+          the meantime, feel free to <a
+            href="&#77;&#65;&#105;&#76;&#116;&#79;&#58;&#100;&#101;&#110;&#110;&#105;&#115;&#46;&#98;&#101;&#115;&#116;&#64;&#109;&#101;&#46;&#99;&#111;&#109;">send
+            an email.</a></h1></div></div>
     <!-- 
 
     <script id="replace_with_header" blocking="render"
