--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body class="work-sans-400">
     <div class="cont">
       <div class="temp">
-        <h1>I am working on this page right now. Check back on May 6, 2024. In
+        <h1>I am working on this page right now. Check back later. In
           the meantime, feel free to <a
             href="&#77;&#65;&#105;&#76;&#116;&#79;&#58;&#100;&#101;&#110;&#110;&#105;&#115;&#46;&#98;&#101;&#115;&#116;&#64;&#109;&#101;&#46;&#99;&#111;&#109;">send
             an email.</a></h1></div></div>
